Fix footer spacing based on results returned

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,16 +104,11 @@ body {
 
 .page-content {
   min-height: 100%;
-  margin-bottom: -120px;
 }
 
 .page-content::after {
   content: "";
   display: block;
-}
-
-footer, .page-content::after {
-  height: 120px;
 }
 
 textarea {
